--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,9 @@
-body {background-image: url("https://ik.imagekit.io/ikmedia/backlit.jpg"); padding: 0; margin: 0 }
+body {
+  background-image: url("https://ik.imagekit.io/ikmedia/backlit.jpg");
+  background-size: cover; background-position: top center; background-repeat: no-repeat;
+  padding: 0;
+  margin: 0 
+}
 #unity-container { position: absolute }
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
