--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://ik.imagekit.io/ikmedia/backlit.jpg");
+  background-image: url("https://www.wallpapers4u.org/wp-content/uploads/paper_crumpled_light_shadow_35117_1920x1080.jpg");
   background-size: cover; background-position: top center; background-repeat: no-repeat;
   padding: 0;
   margin: 0 
